[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ground1.gd" type="Script" id=3]
[ext_resource path="res://Ground2.gd" type="Script" id=4]
[ext_resource path="res://Root.gd" type="Script" id=5]
[ext_resource path="res://Player.gd" type="Script" id=6]
[ext_resource path="res://Fav.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cactus1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cactus2.tscn" type="PackedScene" id=10]
[ext_resource path="res://LGTM.tscn" type="PackedScene" id=11]
[ext_resource path="res://CactusSensor.tscn" type="PackedScene" id=12]
[ext_resource path="res://FavSensor.tscn" type="PackedScene" id=13]

[node name="Root" type="Node2D"]
script = ExtResource( 5 )
c1 = ExtResource( 9 )
c2 = ExtResource( 10 )
fav = ExtResource( 7 )
lgtm = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 153.849, 309.361 )
script = ExtResource( 6 )

[node name="FavSensor" parent="Player" instance=ExtResource( 13 )]
position = Vector2( -4.20389, -2.10199 )

[node name="CactusSensor" parent="Player" instance=ExtResource( 12 )]
position = Vector2( -7.35681, -32.5801 )

[node name="Ground1" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 430 )
script = ExtResource( 3 )

[node name="Ground2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1536, 430 )
script = ExtResource( 4 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Fav" parent="." instance=ExtResource( 7 )]
position = Vector2( 1077.63, 173.913 )

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0

[connection signal="body_entered" from="Player/FavSensor" to="." method="_on_FavSensor_body_entered"]
[connection signal="body_entered" from="Player/CactusSensor" to="." method="_on_CactusSensor_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
